# shoes-store

./: .env  .gitignore  .zshrc  README.md  compose-up.sh  compose.sh  docker-compose.override.yml  docker-compose.yml
cart/: .env  Dockerfile  Dockerfile.rabbitmq  FastAPI.Dockerfile  consumer.py  docker.env  main.py  pyproject.toml  requirements.txt
cart/api/: bin.py
cart/config/: db.py  rabbitmq.py  settings.py
cart/models/db/: models.py
cart/models/requests/: bin.py
cart/rabbitmq/: client.py  types.py
cart/rabbitmq/message_handlers/: cart.py
cart/repository/: bin.py
cart/service/: cart.py
catalog/: .env  docker-compose.yml  docker.env  exceptions.py  main.py  pyproject.toml  requirements.txt
catalog/api/: model.py  warehouse.py
catalog/config/: db.py  settings.py
catalog/models/common/: color.py  gender.py  models_filter.py  sport_type.py
catalog/models/db/: catalog.py
catalog/models/requests/: model.py  warehouse.py
catalog/repository/: model.py  warehouse.py
catalog/service/: __init__.py  model.py  warehouse.py
gateway/: .env  .pylintrc  Dockerfile.backend  docker-compose.yml  docker.env  entrypoint.sh  gateway_decorator.py  main.py  network.py  openapi.py  pre_build_tasks.sh  pyproject.toml  requirements.txt  router.py  settings.py
gateway/api/: users.py
gateway/config/: settings.py
gateway/models/requests/: __init__.py  login.py
gateway/models/responses/: login.py
nginx/: Dockerfile  nginx.conf
order/: Dockerfile.backend  consumer.py  main.py
order/api/: order.py
order/models/db/: models.py
order/rabbitmq/: client.py  types.py
order/rabbitmq/message_handlers/: orders.py
order/repository/: order.py
order/service/: order.py
order_history/: .env  consumer.py  docker.env  main.py  pyproject.toml  requirements.txt
order_history/api/: order_history.py
order_history/config/: db.py  settings.py
order_history/models/db/: models.py
order_history/models/requests/: order_history.py
order_history/rabbitmq/: client.py  types.py
order_history/rabbitmq/message_handlers/: order_history.py  orders.py
order_history/repository/: order_history.py
order_history/service/: order.py
orders/: .env  Dockerfile.backend  Dockerfile.rabbitmq  consumer.py  docker.env  exceptions.py  main.py  pyproject.toml  requirements.txt
orders/api/: order.py
orders/config/: db.py  settings.py
orders/models/requests/: order.py
orders/rabbitmq/: client.py  models.py  types.py
orders/rabbitmq/message_handlers/: base.py  orders.py
orders/service/: order.py
users/: .env  Dockerfile.backend  alembic.ini  docker-compose.yaml  docker-compose.yml  docker.env  entrypoint.sh  main.py  pyproject.toml  requirements.txt  security.py
users/alembic/: env.py
users/alembic/versions/: 2a8931c7177f_added_users_tables.py  c0080d726ade_added_users_tables.py
users/api/: login.py
users/config/: db.py  settings.py
users/models/db/: __init__.py  login.py  profile.py
users/models/requests/: login.py
users/repository/: login.py
users/services/: login.py
