[tool.poetry]
name = "catalog"
version = "0.1.0"
description = ""
authors = ["darbestor <fordarbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
beanie = "^1.13.0"
varname = "^0.10.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
black = {version = "^22.10.0", allow-prereleases = true}
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
