[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API Gateway with authentication responsibility"
authors = ["darbestor <fordarbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
asyncpg = "^0.26.0"
SQLAlchemy = "^1.4.42"
aiohttp = "^3.8.3"
alembic = "^1.8.1"
sqlalchemy2-stubs = "^0.0.2a29"
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
pylint = "^2.15.5"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
