[tool.poetry]
name = "order"
version = "0.1.0"
description = "Orders service"
authors = ["Darbestor <fordarbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
beanie = "^1.13.1"
aio-pika = "^8.2.4"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
pylint = "^2.15.5"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
